[dependencies]
numpy = "^1.4.1"
scipy = "^1.19.5"
pytest = "^6.2"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.7.1",
    "cmake>=3.21",
    "scikit-build>=0.12",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.cibuildwheel]
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-arm64", "*-universal2"]
test-requires = "numpy pytest scipy"
test-command = "pytest {project}"

#[tool.cibuildwheel.linux]
#environment = { CPM_SOURCE_CACHE="/host/.cache/CPM" }
