[project]
name = "eqlib"
version = "1.0.0"
requires-python = ">=3.6"
dependencies = [
  'numpy>=1.19.5',
  'scipy>=1.4.1',
  'importlib-metadata; python_version < "<3.8"',
]

[project.optional-dependencies]
tests = [
  'pytest>=6',
]

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake>=3.21",
  "scikit-build>=0.12",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp3*-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*", "*-arm64", "*-universal2"]
test-requires = "numpy>=1.19.5 pytest>6 scipy>=1.4.1"
test-command = "pytest {project}/tests"

#[tool.cibuildwheel.linux]
#environment = { CPM_SOURCE_CACHE="/host/.cache/CPM" }
